Add Speed feature and cosine example.

--- a/Turtle_wheel.ipynb
+++ b/Turtle_wheel.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:444dedf1b0c7b439d0e6d9150d92b1895e6ae8f33a08b4dfe665b9bd1e62fef3"
+  "signature": "sha256:d7efe77c63f6f449cc4e0fcdca9009a367caa61e8072a7cc5e01fceddc8425d1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,12 +19,7 @@
       "for i in range (0,18):\n",
       "    t.pencolor(colours[i%7]);\n",
       "    t.right(20);\n",
-      "    t.forward(50);\n",
-      "\n",
-      "    \n",
-      "   \n",
-      "    \n",
-      "\n"
+      "    t.forward(50);"
      ],
      "language": "python",
      "metadata": {},
@@ -76,7 +71,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 1
     }
    ],
    "metadata": {}
