Commiting unmerged files

--- a/Turtle_wheel.ipynb
+++ b/Turtle_wheel.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c11854eb58f401f66a758f162126d49bbcfde3643b8ad391c1d8601bff7d7ba4"
+  "signature": "sha256:b86660848741563187a2bc73344beae39a7a4d9c4958be69d7cb84f630323631"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,11 +20,8 @@
       "    t.pencolor(colours[i%7]);\n",
       "    t.right(20);\n",
       "    t.forward(50);\n",
-      "\n",
-      "    \n",
-      "   \n",
-      "    \n",
-      "\n"
+      "from NewTurtle import Turtle\n",
+      "from NewTurtle import Turtle"
      ],
      "language": "python",
      "metadata": {},
@@ -75,7 +72,7 @@
        ]
       }
      ],
-     "prompt_number": 49
+     "prompt_number": 5
     }
    ],
    "metadata": {}
