--- a/Turtle_star.ipynb
+++ b/Turtle_star.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f293a85bb3a69294487aaf799cef2ee0323d000b4850d915701768cd79e1d63d"
+  "signature": "sha256:6f34aee710e4eafa605e09ed6b6adf90e5beabb22908deaf08cd2f323518338a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,9 +21,7 @@
       "    t.right(144)\n",
       "    t.pencolor(\"gold\");\n",
       "    t.forward(40)\n",
-      "    x-=1\n",
-      "print \"test\"\n",
-      "print \"hello\""
+      "    x-=1"
      ],
      "language": "python",
      "metadata": {},
@@ -47,13 +45,11 @@
         "TURTLE 1 gold 220.676274578 244.083893922 0 1\n",
         "TURTLE 1 blue 160.0 200.0 0 1\n",
         "TURTLE 1 blue 160.0 200.0 144 1\n",
-        "TURTLE 1 gold 200.0 200.0 0 1\n",
-        "test\n",
-        "hello\n"
+        "TURTLE 1 gold 200.0 200.0 0 1\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
