--- a/Turtle_wheel.ipynb
+++ b/Turtle_wheel.ipynb
@@ -19,9 +19,7 @@
       "for i in range (0,18):\n",
       "    t.pencolor(colours[i%7]);\n",
       "    t.right(20);\n",
-      "    t.forward(50);\n",
-      "from NewTurtle import Turtle\n",
-      "from NewTurtle import Turtle"
+      "    t.forward(50);"
      ],
      "language": "python",
      "metadata": {},
